Add missing __sync_lock_test_and_set_* aliases for PR lib/48601